- Remove Google subscription API. - Add Google purchase API.
