# swagger.yaml
@@ -16,29 +16,78 @@ produces:
   - application/json
 
 paths:
-  /google/subscription/{token}:
+  /validate/google/{purchase_data}:
     get:
-      description: To verify the status of Google subscription of the user.
+      description: To verify the status of iOS (IAP/subscription) from the given Google receipt.
       parameters:
-        - name: token
+        - name: purchase_data
           in: path
-          description: The token provided to the user's device when the subscription was purchased.
+          description: The purchase data from Google to verify.
           required: true
           type: string
       tags:
         - Google
+        - IAP
         - Subscription
       responses:
         200:
           description: Result of the subscription status
           schema:
             properties:
-              developerPayload:
+              code:
+                type: integer
+                description: 0 - constant value, indicate the success of validation.
+              platform:
+                type: string
+                description: Google - constant string Google, indicate for Google platform.
+              type:
+                type: string
+                description: iap - for product type IAP; subscription - for product type Subscription.
+              app_id:
+                type: string
+                description: The package name of the purchase.
+              product_id:
+                type: string
+                description: The product ID of the purchase.
+              status:
+                type: integer
+                description: (reserved)
+              transaction_id:
+                type: string
+                description: (reserved)
+              original_transaction_id:
+                type: string
+                description: (reserved)
+              developer_payload:
                 type: string
                 description: A developer-specified string that contains supplemental information about an order.
-              expiryTimeMillis:
+              purchase_state:
                 type: integer
-                description: Time at which the subscription will expire, in milliseconds since Epoch.
+                description: (iap only) The purchase state of the order. Possible values are - (0:Purchased, 1:Cancelled).
+              consumption_state:
+                type: integer
+                description: (iap only) The consumption state of the inapp product. Possible values are - (0:Yet to be consumed, 1:Consumed).
+              auto_renewing:
+                type: boolean
+                description: (subscription only) Whether the subscription will automatically be renewed when it reaches its current expiry time.
+              price_currency_code:
+                type: string
+                description: (subscription only) ISO 4217 currency code for the subscription price. For example, if the price is specified in British pounds sterling, price_currency_code is "GBP".
+              price_amount_micros:
+                type: integer
+                description: (subscription only) Price of the subscription, not including tax. Price is expressed in micro-units, where 1,000,000 micro-units equal one unit of the currency. For example, if the subscription price is €1.99, price_amount_micros is 1990000.
+              country_code:
+                type: string
+                description: (subscription only) ISO 3166-1 alpha-2 billing country/region code of the user at the time the subscription was granted.
+              cancel_reason:
+                type: integer
+                description: (subscription only) The cancel reason of the subscription, if the subscription is not auto renewing. Possible values are - (0:User cancelled the subscription, 1:Subscription was cancelled by the system, for example because of a billing problem).
+              original_purchase_date:
+                type: integer
+                description: The Epoch timestamp in milliseconds of original purchase date.
+              expires_date:
+                type: integer
+                description: (subscription only, otherwise 0) The Epoch timestamp in milliseconds of epiration.
         default:
           description: unepected error
           schema:
@@ -49,6 +98,9 @@ paths:
               error:
                 type: string
                 description: The detail of the error.
+              receipt:
+                type: string
+                description: The receipt JSON from Google if have.
   /validate/ios/6/{bundle}/{receipt}:
     get:
       description: To verify the status of iOS (IAP/subscription) from the given iOS 6 style receipt.
@@ -81,27 +133,51 @@ paths:
               type:
                 type: string
                 description: iap - for product type IAP; subscription - for product type Subscription.
-              status:
-                type: integer
-                description: The status code of the receipt.
               app_id:
                 type: string
                 description: The bundle ID of the purchase.
               product_id:
                 type: string
                 description: The product ID of the purchase.
+              status:
+                type: integer
+                description: The status code of the receipt.
               transaction_id:
                 type: string
                 description: The transaction ID of the receipt.
               original_transaction_id:
                 type: string
                 description: The original transaction ID of the receipt.
+              developer_payload:
+                type: string
+                description: (reserved)
+              purchase_state:
+                type: integer
+                description: (reserved)
+              consumption_state:
+                type: integer
+                description: (reserved)
+              auto_renewing:
+                type: boolean
+                description: (reserved)
+              price_currency_code:
+                type: string
+                description: (reserved)
+              price_amount_micros:
+                type: integer
+                description: (reserved)
+              country_code:
+                type: string
+                description: (reserved)
+              cancel_reason:
+                type: integer
+                description: (reserved)
               original_purchase_date:
                 type: integer
-                description: The Epoch timestamp of original purchase date.
+                description: The Epoch timestamp in milliseconds of original purchase date.
               expires_date:
                 type: integer
-                description: (subscription only, otherwise 0) The Epoch timestamp of epiration.
+                description: (subscription only, otherwise 0) The Epoch timestamp in milliseconds of epiration.
         default:
           description: unepected error
           schema:
@@ -155,27 +231,51 @@ paths:
               type:
                 type: string
                 description: iap - for product type IAP; subscription - for product type Subscription.
-              status:
-                type: integer
-                description: The status code of the receipt.
               app_id:
                 type: string
                 description: The bundle ID of the purchase.
               product_id:
                 type: string
                 description: The product ID of the purchase.
+              status:
+                type: integer
+                description: The status code of the receipt.
               transaction_id:
                 type: string
                 description: The transaction ID of the receipt.
               original_transaction_id:
                 type: string
                 description: The original transaction ID of the receipt.
+              developer_payload:
+                type: string
+                description: (reserved)
+              purchase_state:
+                type: integer
+                description: (reserved)
+              consumption_state:
+                type: integer
+                description: (reserved)
+              auto_renewing:
+                type: boolean
+                description: (reserved)
+              price_currency_code:
+                type: string
+                description: (reserved)
+              price_amount_micros:
+                type: integer
+                description: (reserved)
+              country_code:
+                type: string
+                description: (reserved)
+              cancel_reason:
+                type: integer
+                description: (reserved)
               original_purchase_date:
                 type: integer
-                description: The Epoch timestamp of original purchase date.
+                description: The Epoch timestamp in milliseconds of original purchase date.
               expires_date:
                 type: integer
-                description: (subscription only, otherwise 0) The Epoch timestamp of epiration.
+                description: (subscription only, otherwise 0) The Epoch timestamp in milliseconds of epiration.
         default:
           description: unepected error
           schema:
